its now a touch better

--- a/app/work/glitcher/background.mdx
+++ b/app/work/glitcher/background.mdx
@@ -34,8 +34,16 @@ Components are multi-use, flexible for various use cases. Everything is built mo
 <Spacer />
 <DataContainer
     data={[
-        { number: "100%", subtitle: "Performance" },
+        { number: "99%", subtitle: "Performance" },
     {    number: "96%", subtitle: "Accessibility" },
+    ]}
+/>
+<Spacer />
+
+<DataContainer
+    data={[
+        { number: "100%", subtitle: "Best practises" },
+    {    number: "91%", subtitle: "SEO" },
     ]}
 />
 <Spacer />
