--- a/app/work/ge/background.mdx
+++ b/app/work/ge/background.mdx
@@ -6,7 +6,7 @@ import ge5 from "@/public/ge/ge-5.png";
 
 **Process**
 
-Ge Healthcare approached with a need for a light rework on Clinical View based on user data. After our careful analyzing of the same user data, a larger redesign was seen appropriate. Clinical View is a portal that serves healthcare professionals with latest research and other professional medical content. A goal for the site was to generate returning users through engaging content. A particular aspect recognized was also the usability of [Clinical Wiew](clinicalview.gehealthcare.com), which is why a larger redesign was seen appropriate and needed from all stakeholders after first presentation of user research findings.
+Ge Healthcare approached with a need for a light rework on Clinical View based on user data. After our careful analyzing of the same user data, a larger redesign was seen appropriate. Clinical View is a portal that serves healthcare professionals with latest research and other professional medical content. A goal for the site was to generate returning users through engaging content. A particular aspect recognized was also the usability of [Clinical View](clinicalview.gehealthcare.com), which is why a larger redesign was seen appropriate and needed from all stakeholders after first presentation of user research findings.
 
 <Spacer b={false} />
 <ImageGallery images={[ge5]} half={true} inline={true} />
@@ -14,5 +14,5 @@ Ge Healthcare approached with a need for a light rework on Clinical View based o
 
 **Design** 
 
-A complete overhaul was not seen as just, but a significant overhaul of current elements visuality was under inspection. New components included all needed interactivity states that make the new user interface more user friendly.
+A complete overhaul was not seen as just, but a significant revision of current elements visuality was due. New components included all needed interactivity states that make the new user interface more user friendly.
 
